Task3/syntax_tree/y.output
State 82 conflicts: 2 shift/reduce
State 92 conflicts: 4 reduce/reduce
State 97 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 131 conflicts: 2 shift/reduce


Grammar

    0 $accept: sentence $end

    1 $@1: /* empty */

    2 $@2: /* empty */

    3 $@3: /* empty */

    4 sentence: $@1 P $@2 V $@3 M

    5 $@4: /* empty */

    6 $@5: /* empty */

    7 P: Prog $@4 Identifier $@5 SC

    8 $@6: /* empty */

    9 V: Var $@6 LS

   10 $@7: /* empty */

   11 LS: L $@7 LS
   12   | L

   13 $@8: /* empty */

   14 $@9: /* empty */

   15 $@10: /* empty */

   16 $@11: /* empty */

   17 $@12: /* empty */

   18 L: $@8 LHS $@9 Colon $@10 $@11 RHS $@12 SC

   19 RHS: Type

   20 $@13: /* empty */

   21 $@14: /* empty */

   22 $@15: /* empty */

   23 $@16: /* empty */

   24 $@17: /* empty */

   25 $@18: /* empty */

   26 $@19: /* empty */

   27 $@20: /* empty */

   28 RHS: Array $@13 ArrayOpen $@14 NumberLiteral $@15 DoubleDots $@16 NumberLiteral $@17 ArrayClose $@18 Of $@19 $@20 Y

   29 Y: Type

   30 $@21: /* empty */

   31 LHS: Identifier $@21 H

   32 $@22: /* empty */

   33 H: comma $@22 LHS
   34  | /* empty */

   35 $@23: /* empty */

   36 $@24: /* empty */

   37 $@25: /* empty */

   38 $@26: /* empty */

   39 M: Begin $@23 J $@24 B $@25 End $@26 Stop

   40 $@27: /* empty */

   41 $@28: /* empty */

   42 J: B $@27 End $@28 Stop
   43  | End Stop

   44 $@29: /* empty */

   45 B: S $@29 B
   46  | S

   47 $@30: /* empty */

   48 $@31: /* empty */

   49 $@32: /* empty */

   50 $@33: /* empty */

   51 S: $@30 I $@31 AsmtOp $@32 Expression $@33 SC

   52 $@34: /* empty */

   53 S: $@34 Read OpenParenthesis I CloseParenthesis SC

   54 $@35: /* empty */

   55 S: $@35 Write OpenParenthesis WriteBody CloseParenthesis SC

   56 $@36: /* empty */

   57 S: $@36 IfStatement

   58 $@37: /* empty */

   59 S: $@37 ForLoop

   60 $@38: /* empty */

   61 S: $@38 WhileLoop

   62 $@39: /* empty */

   63 S: $@39 Block

   64 $@40: /* empty */

   65 I: Identifier $@40 G

   66 $@41: /* empty */

   67 $@42: /* empty */

   68 G: ArrayOpen $@41 ArithmeticExpression $@42 ArrayClose
   69  | /* empty */

   70 $@43: /* empty */

   71 $@44: /* empty */

   72 Block: Begin $@43 $@44 A

   73 $@45: /* empty */

   74 $@46: /* empty */

   75 A: $@45 B $@46 End
   76  | End

   77 $@47: /* empty */

   78 $@48: /* empty */

   79 WriteBody: $@47 I $@48 C

   80 $@49: /* empty */

   81 WriteBody: String $@49 D

   82 $@50: /* empty */

   83 C: comma $@50 WriteBody
   84  | /* empty */

   85 $@51: /* empty */

   86 D: comma $@51 WriteBody
   87  | /* empty */

   88 $@52: /* empty */

   89 $@53: /* empty */

   90 $@54: /* empty */

   91 $@55: /* empty */

   92 $@56: /* empty */

   93 $@57: /* empty */

   94 $@58: /* empty */

   95 $@59: /* empty */

   96 ForLoop: For $@52 I $@53 AsmtOp $@54 ArithmeticExpression $@55 E $@56 ArithmeticExpression $@57 Do $@58 Block $@59 SC

   97 E: To
   98  | DownTo

   99 $@60: /* empty */

  100 $@61: /* empty */

  101 $@62: /* empty */

  102 $@63: /* empty */

  103 IfStatement: If $@60 BooleanExpression $@61 Then $@62 Block $@63 X

  104 $@64: /* empty */

  105 $@65: /* empty */

  106 X: Else $@64 Block $@65 SC
  107  | SC

  108 $@66: /* empty */

  109 $@67: /* empty */

  110 $@68: /* empty */

  111 $@69: /* empty */

  112 WhileLoop: While $@66 BooleanExpression $@67 Do $@68 Block $@69 SC

  113 Expression: BooleanExpression

  114 $@70: /* empty */

  115 Expression: $@70 ArithmeticExpression

  116 $@71: /* empty */

  117 ArithmeticExpression: $@71 T

  118 $@72: /* empty */

  119 $@73: /* empty */

  120 $@74: /* empty */

  121 ArithmeticExpression: ArithmeticExpression $@72 OP $@73 $@74 T

  122 OP: Plus
  123   | Minus

  124 $@75: /* empty */

  125 T: $@75 F

  126 $@76: /* empty */

  127 $@77: /* empty */

  128 T: T $@76 PO $@77 F

  129 PO: Mul
  130   | Div
  131   | Mod

  132 F: NumberLiteral
  133  | CharacterLiteral

  134 $@78: /* empty */

  135 $@79: /* empty */

  136 F: OpenParenthesis $@78 ArithmeticExpression $@79 CloseParenthesis

  137 $@80: /* empty */

  138 F: $@80 I

  139 $@81: /* empty */

  140 BooleanExpression: $@81 BooleanT
  141                  | BooleanExpression Or BooleanT

  142 BooleanT: BooleanF
  143         | BooleanT And BooleanF

  144 $@82: /* empty */

  145 BooleanF: Not $@82 BooleanF

  146 $@83: /* empty */

  147 $@84: /* empty */

  148 BooleanF: OpenParenthesis $@83 BooleanExpression $@84 CloseParenthesis
  149         | ArithmeticExpression RelationalOperator ArithmeticExpression
  150         | I


Terminals, with rules where they appear

$end (0) 0
error (256)
Type (258) 19 29
Begin (259) 39 72
End (260) 39 42 43 75 76
Var (261) 9
Prog (262) 7
SC (263) 7 18 51 53 55 96 106 107 112
comma (264) 33 83 86
Colon (265) 18
Stop (266) 39 42 43
Read (267) 53
Write (268) 55
Array (269) 28
If (270) 103
Then (271) 103
Else (272) 106
For (273) 96
While (274) 112
AsmtOp (275) 51 96
Not (276) 145
RelationalOperator (277) 149
OpenParenthesis (278) 53 55 136 148
CloseParenthesis (279) 53 55 136 148
String (280) 81
ArrayOpen (281) 28 68
ArrayClose (282) 28 68
CharacterLiteral (283) 133
Of (284) 28
DoubleDots (285) 28
Do (286) 96 112
To (287) 97
DownTo (288) 98
Plus (289) 122
Minus (290) 123
Mul (291) 129
Mod (292) 131
Div (293) 130
Or (294) 141
And (295) 143
NumberLiteral (296) 28 132
Identifier (297) 7 31 65


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
sentence (44)
    on left: 4, on right: 0
$@1 (45)
    on left: 1, on right: 4
$@2 (46)
    on left: 2, on right: 4
$@3 (47)
    on left: 3, on right: 4
P (48)
    on left: 7, on right: 4
$@4 (49)
    on left: 5, on right: 7
$@5 (50)
    on left: 6, on right: 7
V (51)
    on left: 9, on right: 4
$@6 (52)
    on left: 8, on right: 9
LS (53)
    on left: 11 12, on right: 9 11
$@7 (54)
    on left: 10, on right: 11
L (55)
    on left: 18, on right: 11 12
$@8 (56)
    on left: 13, on right: 18
$@9 (57)
    on left: 14, on right: 18
$@10 (58)
    on left: 15, on right: 18
$@11 (59)
    on left: 16, on right: 18
$@12 (60)
    on left: 17, on right: 18
RHS (61)
    on left: 19 28, on right: 18
$@13 (62)
    on left: 20, on right: 28
$@14 (63)
    on left: 21, on right: 28
$@15 (64)
    on left: 22, on right: 28
$@16 (65)
    on left: 23, on right: 28
$@17 (66)
    on left: 24, on right: 28
$@18 (67)
    on left: 25, on right: 28
$@19 (68)
    on left: 26, on right: 28
$@20 (69)
    on left: 27, on right: 28
Y (70)
    on left: 29, on right: 28
LHS (71)
    on left: 31, on right: 18 33
$@21 (72)
    on left: 30, on right: 31
H (73)
    on left: 33 34, on right: 31
$@22 (74)
    on left: 32, on right: 33
M (75)
    on left: 39, on right: 4
$@23 (76)
    on left: 35, on right: 39
$@24 (77)
    on left: 36, on right: 39
$@25 (78)
    on left: 37, on right: 39
$@26 (79)
    on left: 38, on right: 39
J (80)
    on left: 42 43, on right: 39
$@27 (81)
    on left: 40, on right: 42
$@28 (82)
    on left: 41, on right: 42
B (83)
    on left: 45 46, on right: 39 42 45 75
$@29 (84)
    on left: 44, on right: 45
S (85)
    on left: 51 53 55 57 59 61 63, on right: 45 46
$@30 (86)
    on left: 47, on right: 51
$@31 (87)
    on left: 48, on right: 51
$@32 (88)
    on left: 49, on right: 51
$@33 (89)
    on left: 50, on right: 51
$@34 (90)
    on left: 52, on right: 53
$@35 (91)
    on left: 54, on right: 55
$@36 (92)
    on left: 56, on right: 57
$@37 (93)
    on left: 58, on right: 59
$@38 (94)
    on left: 60, on right: 61
$@39 (95)
    on left: 62, on right: 63
I (96)
    on left: 65, on right: 51 53 79 96 138 150
$@40 (97)
    on left: 64, on right: 65
G (98)
    on left: 68 69, on right: 65
$@41 (99)
    on left: 66, on right: 68
$@42 (100)
    on left: 67, on right: 68
Block (101)
    on left: 72, on right: 63 96 103 106 112
$@43 (102)
    on left: 70, on right: 72
$@44 (103)
    on left: 71, on right: 72
A (104)
    on left: 75 76, on right: 72
$@45 (105)
    on left: 73, on right: 75
$@46 (106)
    on left: 74, on right: 75
WriteBody (107)
    on left: 79 81, on right: 55 83 86
$@47 (108)
    on left: 77, on right: 79
$@48 (109)
    on left: 78, on right: 79
$@49 (110)
    on left: 80, on right: 81
C (111)
    on left: 83 84, on right: 79
$@50 (112)
    on left: 82, on right: 83
D (113)
    on left: 86 87, on right: 81
$@51 (114)
    on left: 85, on right: 86
ForLoop (115)
    on left: 96, on right: 59
$@52 (116)
    on left: 88, on right: 96
$@53 (117)
    on left: 89, on right: 96
$@54 (118)
    on left: 90, on right: 96
$@55 (119)
    on left: 91, on right: 96
$@56 (120)
    on left: 92, on right: 96
$@57 (121)
    on left: 93, on right: 96
$@58 (122)
    on left: 94, on right: 96
$@59 (123)
    on left: 95, on right: 96
E (124)
    on left: 97 98, on right: 96
IfStatement (125)
    on left: 103, on right: 57
$@60 (126)
    on left: 99, on right: 103
$@61 (127)
    on left: 100, on right: 103
$@62 (128)
    on left: 101, on right: 103
$@63 (129)
    on left: 102, on right: 103
X (130)
    on left: 106 107, on right: 103
$@64 (131)
    on left: 104, on right: 106
$@65 (132)
    on left: 105, on right: 106
WhileLoop (133)
    on left: 112, on right: 61
$@66 (134)
    on left: 108, on right: 112
$@67 (135)
    on left: 109, on right: 112
$@68 (136)
    on left: 110, on right: 112
$@69 (137)
    on left: 111, on right: 112
Expression (138)
    on left: 113 115, on right: 51
$@70 (139)
    on left: 114, on right: 115
ArithmeticExpression (140)
    on left: 117 121, on right: 68 96 115 121 136 149
$@71 (141)
    on left: 116, on right: 117
$@72 (142)
    on left: 118, on right: 121
$@73 (143)
    on left: 119, on right: 121
$@74 (144)
    on left: 120, on right: 121
OP (145)
    on left: 122 123, on right: 121
T (146)
    on left: 125 128, on right: 117 121 128
$@75 (147)
    on left: 124, on right: 125
$@76 (148)
    on left: 126, on right: 128
$@77 (149)
    on left: 127, on right: 128
PO (150)
    on left: 129 130 131, on right: 128
F (151)
    on left: 132 133 136 138, on right: 125 128
$@78 (152)
    on left: 134, on right: 136
$@79 (153)
    on left: 135, on right: 136
$@80 (154)
    on left: 137, on right: 138
BooleanExpression (155)
    on left: 140 141, on right: 103 112 113 141 148
$@81 (156)
    on left: 139, on right: 140
BooleanT (157)
    on left: 142 143, on right: 140 141 143
BooleanF (158)
    on left: 145 148 149 150, on right: 142 143 145
$@82 (159)
    on left: 144, on right: 145
$@83 (160)
    on left: 146, on right: 148
$@84 (161)
    on left: 147, on right: 148


state 0

    0 $accept: . sentence $end
    1 $@1: .
    4 sentence: . $@1 P $@2 V $@3 M

    $default  reduce using rule 1 ($@1)

    sentence  go to state 1
    $@1       go to state 2


state 1

    0 $accept: sentence . $end

    $end  shift, and go to state 3


state 2

    4 sentence: $@1 . P $@2 V $@3 M
    7 P: . Prog $@4 Identifier $@5 SC

    Prog  shift, and go to state 4

    P  go to state 5


state 3

    0 $accept: sentence $end .

    $default  accept


state 4

    5 $@4: .
    7 P: Prog . $@4 Identifier $@5 SC

    $default  reduce using rule 5 ($@4)

    $@4  go to state 6


state 5

    2 $@2: .
    4 sentence: $@1 P . $@2 V $@3 M

    $default  reduce using rule 2 ($@2)

    $@2  go to state 7


state 6

    7 P: Prog $@4 . Identifier $@5 SC

    Identifier  shift, and go to state 8


state 7

    4 sentence: $@1 P $@2 . V $@3 M
    9 V: . Var $@6 LS

    Var  shift, and go to state 9

    V  go to state 10


state 8

    6 $@5: .
    7 P: Prog $@4 Identifier . $@5 SC

    $default  reduce using rule 6 ($@5)

    $@5  go to state 11


state 9

    8 $@6: .
    9 V: Var . $@6 LS

    $default  reduce using rule 8 ($@6)

    $@6  go to state 12


state 10

    3 $@3: .
    4 sentence: $@1 P $@2 V . $@3 M

    $default  reduce using rule 3 ($@3)

    $@3  go to state 13


state 11

    7 P: Prog $@4 Identifier $@5 . SC

    SC  shift, and go to state 14


state 12

    9 V: Var $@6 . LS
   11 LS: . L $@7 LS
   12   | . L
   13 $@8: .
   18 L: . $@8 LHS $@9 Colon $@10 $@11 RHS $@12 SC

    $default  reduce using rule 13 ($@8)

    LS   go to state 15
    L    go to state 16
    $@8  go to state 17


state 13

    4 sentence: $@1 P $@2 V $@3 . M
   39 M: . Begin $@23 J $@24 B $@25 End $@26 Stop

    Begin  shift, and go to state 18

    M  go to state 19


state 14

    7 P: Prog $@4 Identifier $@5 SC .

    $default  reduce using rule 7 (P)


state 15

    9 V: Var $@6 LS .

    $default  reduce using rule 9 (V)


state 16

   10 $@7: .  [Identifier]
   11 LS: L . $@7 LS
   12   | L .  [Begin]

    Begin     reduce using rule 12 (LS)
    $default  reduce using rule 10 ($@7)

    $@7  go to state 20


state 17

   18 L: $@8 . LHS $@9 Colon $@10 $@11 RHS $@12 SC
   31 LHS: . Identifier $@21 H

    Identifier  shift, and go to state 21

    LHS  go to state 22


state 18

   35 $@23: .
   39 M: Begin . $@23 J $@24 B $@25 End $@26 Stop

    $default  reduce using rule 35 ($@23)

    $@23  go to state 23


state 19

    4 sentence: $@1 P $@2 V $@3 M .

    $default  reduce using rule 4 (sentence)


state 20

   11 LS: . L $@7 LS
   11   | L $@7 . LS
   12   | . L
   13 $@8: .
   18 L: . $@8 LHS $@9 Colon $@10 $@11 RHS $@12 SC

    $default  reduce using rule 13 ($@8)

    LS   go to state 24
    L    go to state 16
    $@8  go to state 17


state 21

   30 $@21: .
   31 LHS: Identifier . $@21 H

    $default  reduce using rule 30 ($@21)

    $@21  go to state 25


state 22

   14 $@9: .
   18 L: $@8 LHS . $@9 Colon $@10 $@11 RHS $@12 SC

    $default  reduce using rule 14 ($@9)

    $@9  go to state 26


state 23

   39 M: Begin $@23 . J $@24 B $@25 End $@26 Stop
   42 J: . B $@27 End $@28 Stop
   43  | . End Stop
   45 B: . S $@29 B
   46  | . S
   47 $@30: .  [Identifier]
   51 S: . $@30 I $@31 AsmtOp $@32 Expression $@33 SC
   52 $@34: .  [Read]
   53 S: . $@34 Read OpenParenthesis I CloseParenthesis SC
   54 $@35: .  [Write]
   55 S: . $@35 Write OpenParenthesis WriteBody CloseParenthesis SC
   56 $@36: .  [If]
   57 S: . $@36 IfStatement
   58 $@37: .  [For]
   59 S: . $@37 ForLoop
   60 $@38: .  [While]
   61 S: . $@38 WhileLoop
   62 $@39: .  [Begin]
   63 S: . $@39 Block

    End  shift, and go to state 27

    Begin     reduce using rule 62 ($@39)
    Read      reduce using rule 52 ($@34)
    Write     reduce using rule 54 ($@35)
    If        reduce using rule 56 ($@36)
    For       reduce using rule 58 ($@37)
    While     reduce using rule 60 ($@38)
    $default  reduce using rule 47 ($@30)

    J     go to state 28
    B     go to state 29
    S     go to state 30
    $@30  go to state 31
    $@34  go to state 32
    $@35  go to state 33
    $@36  go to state 34
    $@37  go to state 35
    $@38  go to state 36
    $@39  go to state 37


state 24

   11 LS: L $@7 LS .

    $default  reduce using rule 11 (LS)


state 25

   31 LHS: Identifier $@21 . H
   33 H: . comma $@22 LHS
   34  | .  [Colon]

    comma  shift, and go to state 38

    $default  reduce using rule 34 (H)

    H  go to state 39


state 26

   18 L: $@8 LHS $@9 . Colon $@10 $@11 RHS $@12 SC

    Colon  shift, and go to state 40


state 27

   43 J: End . Stop

    Stop  shift, and go to state 41


state 28

   36 $@24: .
   39 M: Begin $@23 J . $@24 B $@25 End $@26 Stop

    $default  reduce using rule 36 ($@24)

    $@24  go to state 42


state 29

   40 $@27: .
   42 J: B . $@27 End $@28 Stop

    $default  reduce using rule 40 ($@27)

    $@27  go to state 43


state 30

   44 $@29: .  [Begin, Read, Write, If, For, While, Identifier]
   45 B: S . $@29 B
   46  | S .  [End]

    End       reduce using rule 46 (B)
    $default  reduce using rule 44 ($@29)

    $@29  go to state 44


state 31

   51 S: $@30 . I $@31 AsmtOp $@32 Expression $@33 SC
   65 I: . Identifier $@40 G

    Identifier  shift, and go to state 45

    I  go to state 46


state 32

   53 S: $@34 . Read OpenParenthesis I CloseParenthesis SC

    Read  shift, and go to state 47


state 33

   55 S: $@35 . Write OpenParenthesis WriteBody CloseParenthesis SC

    Write  shift, and go to state 48


state 34

   57 S: $@36 . IfStatement
  103 IfStatement: . If $@60 BooleanExpression $@61 Then $@62 Block $@63 X

    If  shift, and go to state 49

    IfStatement  go to state 50


state 35

   59 S: $@37 . ForLoop
   96 ForLoop: . For $@52 I $@53 AsmtOp $@54 ArithmeticExpression $@55 E $@56 ArithmeticExpression $@57 Do $@58 Block $@59 SC

    For  shift, and go to state 51

    ForLoop  go to state 52


state 36

   61 S: $@38 . WhileLoop
  112 WhileLoop: . While $@66 BooleanExpression $@67 Do $@68 Block $@69 SC

    While  shift, and go to state 53

    WhileLoop  go to state 54


state 37

   63 S: $@39 . Block
   72 Block: . Begin $@43 $@44 A

    Begin  shift, and go to state 55

    Block  go to state 56


state 38

   32 $@22: .
   33 H: comma . $@22 LHS

    $default  reduce using rule 32 ($@22)

    $@22  go to state 57


state 39

   31 LHS: Identifier $@21 H .

    $default  reduce using rule 31 (LHS)


state 40

   15 $@10: .
   18 L: $@8 LHS $@9 Colon . $@10 $@11 RHS $@12 SC

    $default  reduce using rule 15 ($@10)

    $@10  go to state 58


state 41

   43 J: End Stop .

    $default  reduce using rule 43 (J)


state 42

   39 M: Begin $@23 J $@24 . B $@25 End $@26 Stop
   45 B: . S $@29 B
   46  | . S
   47 $@30: .  [Identifier]
   51 S: . $@30 I $@31 AsmtOp $@32 Expression $@33 SC
   52 $@34: .  [Read]
   53 S: . $@34 Read OpenParenthesis I CloseParenthesis SC
   54 $@35: .  [Write]
   55 S: . $@35 Write OpenParenthesis WriteBody CloseParenthesis SC
   56 $@36: .  [If]
   57 S: . $@36 IfStatement
   58 $@37: .  [For]
   59 S: . $@37 ForLoop
   60 $@38: .  [While]
   61 S: . $@38 WhileLoop
   62 $@39: .  [Begin]
   63 S: . $@39 Block

    Begin     reduce using rule 62 ($@39)
    Read      reduce using rule 52 ($@34)
    Write     reduce using rule 54 ($@35)
    If        reduce using rule 56 ($@36)
    For       reduce using rule 58 ($@37)
    While     reduce using rule 60 ($@38)
    $default  reduce using rule 47 ($@30)

    B     go to state 59
    S     go to state 30
    $@30  go to state 31
    $@34  go to state 32
    $@35  go to state 33
    $@36  go to state 34
    $@37  go to state 35
    $@38  go to state 36
    $@39  go to state 37


state 43

   42 J: B $@27 . End $@28 Stop

    End  shift, and go to state 60


state 44

   45 B: . S $@29 B
   45  | S $@29 . B
   46  | . S
   47 $@30: .  [Identifier]
   51 S: . $@30 I $@31 AsmtOp $@32 Expression $@33 SC
   52 $@34: .  [Read]
   53 S: . $@34 Read OpenParenthesis I CloseParenthesis SC
   54 $@35: .  [Write]
   55 S: . $@35 Write OpenParenthesis WriteBody CloseParenthesis SC
   56 $@36: .  [If]
   57 S: . $@36 IfStatement
   58 $@37: .  [For]
   59 S: . $@37 ForLoop
   60 $@38: .  [While]
   61 S: . $@38 WhileLoop
   62 $@39: .  [Begin]
   63 S: . $@39 Block

    Begin     reduce using rule 62 ($@39)
    Read      reduce using rule 52 ($@34)
    Write     reduce using rule 54 ($@35)
    If        reduce using rule 56 ($@36)
    For       reduce using rule 58 ($@37)
    While     reduce using rule 60 ($@38)
    $default  reduce using rule 47 ($@30)

    B     go to state 61
    S     go to state 30
    $@30  go to state 31
    $@34  go to state 32
    $@35  go to state 33
    $@36  go to state 34
    $@37  go to state 35
    $@38  go to state 36
    $@39  go to state 37


state 45

   64 $@40: .
   65 I: Identifier . $@40 G

    $default  reduce using rule 64 ($@40)

    $@40  go to state 62


state 46

   48 $@31: .
   51 S: $@30 I . $@31 AsmtOp $@32 Expression $@33 SC

    $default  reduce using rule 48 ($@31)

    $@31  go to state 63


state 47

   53 S: $@34 Read . OpenParenthesis I CloseParenthesis SC

    OpenParenthesis  shift, and go to state 64


state 48

   55 S: $@35 Write . OpenParenthesis WriteBody CloseParenthesis SC

    OpenParenthesis  shift, and go to state 65


state 49

   99 $@60: .
  103 IfStatement: If . $@60 BooleanExpression $@61 Then $@62 Block $@63 X

    $default  reduce using rule 99 ($@60)

    $@60  go to state 66


state 50

   57 S: $@36 IfStatement .

    $default  reduce using rule 57 (S)


state 51

   88 $@52: .
   96 ForLoop: For . $@52 I $@53 AsmtOp $@54 ArithmeticExpression $@55 E $@56 ArithmeticExpression $@57 Do $@58 Block $@59 SC

    $default  reduce using rule 88 ($@52)

    $@52  go to state 67


state 52

   59 S: $@37 ForLoop .

    $default  reduce using rule 59 (S)


state 53

  108 $@66: .
  112 WhileLoop: While . $@66 BooleanExpression $@67 Do $@68 Block $@69 SC

    $default  reduce using rule 108 ($@66)

    $@66  go to state 68


state 54

   61 S: $@38 WhileLoop .

    $default  reduce using rule 61 (S)


state 55

   70 $@43: .
   72 Block: Begin . $@43 $@44 A

    $default  reduce using rule 70 ($@43)

    $@43  go to state 69


state 56

   63 S: $@39 Block .

    $default  reduce using rule 63 (S)


state 57

   31 LHS: . Identifier $@21 H
   33 H: comma $@22 . LHS

    Identifier  shift, and go to state 21

    LHS  go to state 70


state 58

   16 $@11: .
   18 L: $@8 LHS $@9 Colon $@10 . $@11 RHS $@12 SC

    $default  reduce using rule 16 ($@11)

    $@11  go to state 71


state 59

   37 $@25: .
   39 M: Begin $@23 J $@24 B . $@25 End $@26 Stop

    $default  reduce using rule 37 ($@25)

    $@25  go to state 72


state 60

   41 $@28: .
   42 J: B $@27 End . $@28 Stop

    $default  reduce using rule 41 ($@28)

    $@28  go to state 73


state 61

   45 B: S $@29 B .

    $default  reduce using rule 45 (B)


state 62

   65 I: Identifier $@40 . G
   68 G: . ArrayOpen $@41 ArithmeticExpression $@42 ArrayClose
   69  | .  [SC, comma, Then, AsmtOp, RelationalOperator, CloseParenthesis, ArrayClose, Do, To, DownTo, Plus, Minus, Mul, Mod, Div, Or, And]

    ArrayOpen  shift, and go to state 74

    $default  reduce using rule 69 (G)

    G  go to state 75


state 63

   51 S: $@30 I $@31 . AsmtOp $@32 Expression $@33 SC

    AsmtOp  shift, and go to state 76


state 64

   53 S: $@34 Read OpenParenthesis . I CloseParenthesis SC
   65 I: . Identifier $@40 G

    Identifier  shift, and go to state 45

    I  go to state 77


state 65

   55 S: $@35 Write OpenParenthesis . WriteBody CloseParenthesis SC
   77 $@47: .  [Identifier]
   79 WriteBody: . $@47 I $@48 C
   81          | . String $@49 D

    String  shift, and go to state 78

    $default  reduce using rule 77 ($@47)

    WriteBody  go to state 79
    $@47       go to state 80


state 66

  103 IfStatement: If $@60 . BooleanExpression $@61 Then $@62 Block $@63 X
  139 $@81: .
  140 BooleanExpression: . $@81 BooleanT
  141                  | . BooleanExpression Or BooleanT

    $default  reduce using rule 139 ($@81)

    BooleanExpression  go to state 81
    $@81               go to state 82


state 67

   65 I: . Identifier $@40 G
   96 ForLoop: For $@52 . I $@53 AsmtOp $@54 ArithmeticExpression $@55 E $@56 ArithmeticExpression $@57 Do $@58 Block $@59 SC

    Identifier  shift, and go to state 45

    I  go to state 83


state 68

  112 WhileLoop: While $@66 . BooleanExpression $@67 Do $@68 Block $@69 SC
  139 $@81: .
  140 BooleanExpression: . $@81 BooleanT
  141                  | . BooleanExpression Or BooleanT

    $default  reduce using rule 139 ($@81)

    BooleanExpression  go to state 84
    $@81               go to state 82


state 69

   71 $@44: .
   72 Block: Begin $@43 . $@44 A

    $default  reduce using rule 71 ($@44)

    $@44  go to state 85


state 70

   33 H: comma $@22 LHS .

    $default  reduce using rule 33 (H)


state 71

   18 L: $@8 LHS $@9 Colon $@10 $@11 . RHS $@12 SC
   19 RHS: . Type
   28    | . Array $@13 ArrayOpen $@14 NumberLiteral $@15 DoubleDots $@16 NumberLiteral $@17 ArrayClose $@18 Of $@19 $@20 Y

    Type   shift, and go to state 86
    Array  shift, and go to state 87

    RHS  go to state 88


state 72

   39 M: Begin $@23 J $@24 B $@25 . End $@26 Stop

    End  shift, and go to state 89


state 73

   42 J: B $@27 End $@28 . Stop

    Stop  shift, and go to state 90


state 74

   66 $@41: .
   68 G: ArrayOpen . $@41 ArithmeticExpression $@42 ArrayClose

    $default  reduce using rule 66 ($@41)

    $@41  go to state 91


state 75

   65 I: Identifier $@40 G .

    $default  reduce using rule 65 (I)


state 76

   49 $@32: .
   51 S: $@30 I $@31 AsmtOp . $@32 Expression $@33 SC

    $default  reduce using rule 49 ($@32)

    $@32  go to state 92


state 77

   53 S: $@34 Read OpenParenthesis I . CloseParenthesis SC

    CloseParenthesis  shift, and go to state 93


state 78

   80 $@49: .
   81 WriteBody: String . $@49 D

    $default  reduce using rule 80 ($@49)

    $@49  go to state 94


state 79

   55 S: $@35 Write OpenParenthesis WriteBody . CloseParenthesis SC

    CloseParenthesis  shift, and go to state 95


state 80

   65 I: . Identifier $@40 G
   79 WriteBody: $@47 . I $@48 C

    Identifier  shift, and go to state 45

    I  go to state 96


state 81

  100 $@61: .  [Then]
  103 IfStatement: If $@60 BooleanExpression . $@61 Then $@62 Block $@63 X
  141 BooleanExpression: BooleanExpression . Or BooleanT

    Or  shift, and go to state 97

    $default  reduce using rule 100 ($@61)

    $@61  go to state 98


state 82

   65 I: . Identifier $@40 G
  116 $@71: .  [OpenParenthesis, CharacterLiteral, NumberLiteral, Identifier]
  117 ArithmeticExpression: . $@71 T
  121                     | . ArithmeticExpression $@72 OP $@73 $@74 T
  140 BooleanExpression: $@81 . BooleanT
  142 BooleanT: . BooleanF
  143         | . BooleanT And BooleanF
  145 BooleanF: . Not $@82 BooleanF
  148         | . OpenParenthesis $@83 BooleanExpression $@84 CloseParenthesis
  149         | . ArithmeticExpression RelationalOperator ArithmeticExpression
  150         | . I

    Not              shift, and go to state 99
    OpenParenthesis  shift, and go to state 100
    Identifier       shift, and go to state 45

    OpenParenthesis  [reduce using rule 116 ($@71)]
    Identifier       [reduce using rule 116 ($@71)]
    $default         reduce using rule 116 ($@71)

    I                     go to state 101
    ArithmeticExpression  go to state 102
    $@71                  go to state 103
    BooleanT              go to state 104
    BooleanF              go to state 105


state 83

   89 $@53: .
   96 ForLoop: For $@52 I . $@53 AsmtOp $@54 ArithmeticExpression $@55 E $@56 ArithmeticExpression $@57 Do $@58 Block $@59 SC

    $default  reduce using rule 89 ($@53)

    $@53  go to state 106


state 84

  109 $@67: .  [Do]
  112 WhileLoop: While $@66 BooleanExpression . $@67 Do $@68 Block $@69 SC
  141 BooleanExpression: BooleanExpression . Or BooleanT

    Or  shift, and go to state 97

    $default  reduce using rule 109 ($@67)

    $@67  go to state 107


state 85

   72 Block: Begin $@43 $@44 . A
   73 $@45: .  [Begin, Read, Write, If, For, While, Identifier]
   75 A: . $@45 B $@46 End
   76  | . End

    End  shift, and go to state 108

    $default  reduce using rule 73 ($@45)

    A     go to state 109
    $@45  go to state 110


state 86

   19 RHS: Type .

    $default  reduce using rule 19 (RHS)


state 87

   20 $@13: .
   28 RHS: Array . $@13 ArrayOpen $@14 NumberLiteral $@15 DoubleDots $@16 NumberLiteral $@17 ArrayClose $@18 Of $@19 $@20 Y

    $default  reduce using rule 20 ($@13)

    $@13  go to state 111


state 88

   17 $@12: .
   18 L: $@8 LHS $@9 Colon $@10 $@11 RHS . $@12 SC

    $default  reduce using rule 17 ($@12)

    $@12  go to state 112


state 89

   38 $@26: .
   39 M: Begin $@23 J $@24 B $@25 End . $@26 Stop

    $default  reduce using rule 38 ($@26)

    $@26  go to state 113


state 90

   42 J: B $@27 End $@28 Stop .

    $default  reduce using rule 42 (J)


state 91

   68 G: ArrayOpen $@41 . ArithmeticExpression $@42 ArrayClose
  116 $@71: .
  117 ArithmeticExpression: . $@71 T
  121                     | . ArithmeticExpression $@72 OP $@73 $@74 T

    $default  reduce using rule 116 ($@71)

    ArithmeticExpression  go to state 114
    $@71                  go to state 103


state 92

   51 S: $@30 I $@31 AsmtOp $@32 . Expression $@33 SC
  113 Expression: . BooleanExpression
  114 $@70: .  [OpenParenthesis, CharacterLiteral, NumberLiteral, Identifier]
  115 Expression: . $@70 ArithmeticExpression
  139 $@81: .  [Not, OpenParenthesis, CharacterLiteral, NumberLiteral, Identifier]
  140 BooleanExpression: . $@81 BooleanT
  141                  | . BooleanExpression Or BooleanT

    Not               reduce using rule 139 ($@81)
    OpenParenthesis   reduce using rule 114 ($@70)
    OpenParenthesis   [reduce using rule 139 ($@81)]
    CharacterLiteral  reduce using rule 114 ($@70)
    CharacterLiteral  [reduce using rule 139 ($@81)]
    NumberLiteral     reduce using rule 114 ($@70)
    NumberLiteral     [reduce using rule 139 ($@81)]
    Identifier        reduce using rule 114 ($@70)
    Identifier        [reduce using rule 139 ($@81)]
    $default          reduce using rule 114 ($@70)
